--- a/app/views/rating/rateMain.scala.html
+++ b/app/views/rating/rateMain.scala.html
@@ -1,5 +1,5 @@
 @()(content: Html)
 
-<button class="btn btn-primary btn-sm pull-left btn-rate-popover collapsed" data-toggle="collapse" data-target=".rate-popover"><span class="glyphicon glyphicon-chevron-down"></span><span class="glyphicon glyphicon-chevron-up"></span>&nbsp;@Messages("rating.add.button.text")</button>
+<button class="btn btn-link pull-left btn-rate-popover collapsed" data-toggle="collapse" data-target=".rate-popover"><span class="glyphicon glyphicon-chevron-down"></span><span class="glyphicon glyphicon-chevron-up"></span>&nbsp;@Messages("rating.add.button.text")</button>
 <div class="row"><div class="col-xs-12 rate-popover collapse">@content</div></div>
 <div class="clearfix"></div>
