inbox layout ändrad, om man svarat på en request så ser man svaret när man öppnar det mailet, en användare ser även vad orginal meddeladen var i en reply. databas modellen för meddelandena uppdaterad lite

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1531,13 +1531,11 @@ a.morelink {
 .morecontent span {
   display: none;
 }
-.comment {
-  width: 600px;
-//  background-color: #f0f0f0;
-  margin: 10px;
+
+.inboxTable>tbody>tr>td {
+  padding: 0px;
+  vertical-align: middle;
 }
-
-
 
 // Responsive
 /* Large devices (large desktops, 1200px and up) */
