--- a/app/views/host/applyHost.scala.html
+++ b/app/views/host/applyHost.scala.html
@@ -11,11 +11,11 @@
             case Some(currentUser) => {
                 @if(hostForm.get.memberId.nonEmpty && !hostForm.get.hostId.toString.equalsIgnoreCase(currentUser.objectId.toString)){
                     <div class="grade hdc-grade">
-                        @helper.form(action = routes.HostController.applyToHost(), 'class -> "form-horizontal") {
+                        @helper.form(action = routes.MessagesController.applyToHost()) {
                             <fieldset>
                                 @helper.inputTextHorizontal(hostForm("firstName"), 'readonly -> "readonly", '_label -> "Förnamn", 'class -> "col-sm-10")
                                 @helper.inputTextHorizontal(hostForm("lastName"), 'readonly -> "readonly", '_label -> "Efternamn", 'class -> "col-sm-10")
-                                @helper.inputTextHorizontal(hostForm("phone"), '_label -> "Telefon", 'required -> "required", 'class -> "col-sm-10", '_error -> hostForm.error("phone"))
+                                @helper.inputTextHorizontal(hostForm("phone"), '_label -> "Telefon", 'required -> "required", 'class -> "col-sm-10", '_error -> "test")
                                 @helper.inputTextHorizontal(hostForm("date"), 'type -> "date", '_label -> "Datum", 'class -> "col-sm-10")
                                 @helper.inputTextHorizontal(hostForm("time"), 'type -> "time", '_label -> "Tid", 'class -> "col-sm-10")
                                 @helper.inputTextHorizontal(hostForm("numberOfGuests"), 'type -> "number", '_label -> "Antal", 'class -> "col-sm-10")
