länk till den egna profilen finns i mailet nu

--- a/app/views/host/hostReplyMain.scala.html
+++ b/app/views/host/hostReplyMain.scala.html
@@ -18,6 +18,9 @@
     <td>
         <button id="expandBtn" class="btn btn-primary btn-sm pull-left btn-host-popover collapsed" data-toggle="collapse" data-target="#@id"><span class="glyphicon glyphicon-chevron-down"></span><span class="glyphicon glyphicon-chevron-up"></span></button>
     </td>
+    <td>
+        <span hidden="true"  class="genericon genericon-mail"></span>
+    </td>
 </tr>
 <tr class="inboxTable">
     <td colspan="5">
