--- a/app/views/host/replyGuest.scala.html
+++ b/app/views/host/replyGuest.scala.html
@@ -64,7 +64,7 @@
                                 </table>
                                 <br/>
                                 <div class="col-xs-12">
-                                    @helper.inputTextHorizontal(hostReplyForm("firstName"), '_label -> "Till", 'class -> "col-sm-10")
+                                    @helper.inputTextHorizontal(hostReplyForm("firstName"), 'readonly -> "readonly", '_label -> "Till", 'class -> "col-sm-10")
                                     @helper.inputTextHorizontal(hostReplyForm("response"), 'type -> "textarea", 'rows -> 6, '_label -> "Svar", 'required -> "required", 'class -> "col-sm-10")
                                 </div>
 
